feat: add subject recs
